styles/styles.scss
@import './themes';

.g-root {
    background: var(--g-color-base-background);
    color: var(--g-color-text-primary);

    @include g-theme-common;

    &_theme_light {
        @include g-theme-light;
    }

    &_theme_dark {
        @include g-theme-dark;
    }

    &_theme_light-hc {
        @include g-theme-light-hc;
    }

    &_theme_dark-hc {
        @include g-theme-dark-hc;
    }
}

body.g-root:not(.g-root_mobile):not(.g-root_native-scrollbar) {
    &::-webkit-scrollbar,
    *::-webkit-scrollbar {
        width: var(--g-scrollbar-width);
        height: var(--g-scrollbar-width);
        background: var(--g-color-scroll-track);
    }

    &::-webkit-scrollbar-track,
    *::-webkit-scrollbar-track {
        background: var(--g-color-scroll-track);
    }

    &::-webkit-scrollbar-corner,
    *::-webkit-scrollbar-corner {
        background: var(--g-color-scroll-corner);
    }

    &::-webkit-scrollbar-thumb,
    *::-webkit-scrollbar-thumb {
        background: var(--g-color-scroll-handle);
    }

    &::-webkit-scrollbar-thumb:hover,
    *::-webkit-scrollbar-thumb:hover {
        background: var(--g-color-scroll-handle-hover);
    }

    // stylelint-disable-next-line property-no-unknown
    scrollbar-width: var(--g-scrollbar-width);
    // stylelint-disable-next-line property-no-unknown
    scrollbar-color: var(--g-color-scroll-handle) var(--g-color-scroll-track);
}

@keyframes yc-loading-animation {
    from {
        background-position: -12px 0;
    }
    to {
        background-position: 0 0;
    }
}

